--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -84,10 +84,10 @@
 		TEC_ETHIC_EGALITARIAN_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §HTO DO§! Policy, altering the bonuses of some living standards\n\n"
 		TEC_ETHIC_EGALITARIAN_MECHANIC:0 "§EMechanic Bonus:§! TO DO\n\n"
 
-		policy_tec_egalitarian_ethic:0 "TO DO NAME"
-		policy_tec_egalitarian_ethic_desc:0 "TO DO DESC"
+		policy_tec_egalitarian_ethic_policy:0 "TO DO NAME"
+		policy_tec_egalitarian_ethic_policy_desc:0 "TO DO DESC"
 
-		policy_option_tec_egalitarian_a_name:0 "A"
+		policy_option_tec_egalitarian_a:0 "A"
 		policy_option_tec_egalitarian_a_flag:0 "A"
 		policy_option_tec_egalitarian_a_desc:0 "TO DO.\n\n§ETO DO§!"
 
@@ -95,18 +95,18 @@
 		#	> Monthly influence +0.5/+1
 		TEC_ETHIC_AUTHORITARIAN_POLICY:0 "§EPolicy Bonus:§! has access to the £political_power£ §HEnforced Overseeing§! Policy, giving a higher degree of population enforcement focuses"
 
-		policy_tec_authoritarian_control:0 "TO DO NAME"
-		policy_tec_authoritarian_control_desc:0 "TO DO DESC"
+		policy_tec_authoritarian_ethic_policy:0 "TO DO NAME"
+		policy_tec_authoritarian_ethic_policy_desc:0 "TO DO DESC"
 
-		policy_option_tec_authoritarian_lenient_name:0 "A"
+		policy_option_tec_authoritarian_lenient:0 "A"
 		policy_option_tec_authoritarian_lenient_flag:0 "A"
 		policy_option_tec_authoritarian_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_authoritarian_default_name:0 "A"
+		policy_option_tec_authoritarian_default:0 "A"
 		policy_option_tec_authoritarian_default_flag:0 "A"
 		policy_option_tec_authoritarian_default_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_authoritarian_oppressive_name:0 "A"
+		policy_option_tec_authoritarian_oppressive:0 "A"
 		policy_option_tec_authoritarian_oppressive_flag:0 "A"
 		policy_option_tec_authoritarian_oppressive_desc:0 "TO DO.\n\n§ETO DO§!"
 
@@ -114,22 +114,25 @@
 		#	> Power projection +25-50%
 		TEC_ETHIC_MILITARIST_POLICY:0 "§EPolicy Bonus:§! has access to the £political_power£ §HTactical Targeting§! Policy, allowing specific focuses of ship combat damages"
 
+		policy_tec_militarist_ethic_policy:0 "TO DO NAME"
+		policy_tec_militarist_ethic_policy_desc:0 "TO DO DESC"
+
 		#- Pacifist
 		#	> +5/10 stability
 		TEC_ETHIC_PACIFIST_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §HTO DO§! Policy, allowing a better control of cultural and societal development\n\n"
 
-		policy_tec_pacifist_control:0 "TO DO NAME"
-		policy_tec_pacifist_control_desc:0 "TO DO DESC"
+		policy_tec_pacifist_ethic_policy:0 "TO DO NAME"
+		policy_tec_pacifist_ethic_policy_desc:0 "TO DO DESC"
 
-		policy_option_tec_pacifist_lenient_name:0 "A"
+		policy_option_tec_pacifist_lenient:0 "A"
 		policy_flag_tec_pacifist_lenient:0 "A"
 		policy_option_tec_pacifist_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_pacifist_default_name:0 "A"
+		policy_option_tec_pacifist_default:0 "A"
 		policy_option_tec_pacifist_default_flag:0 "A"
 		policy_option_tec_pacifist_default_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_pacifist_oppressive_name:0 "A"
+		policy_option_tec_pacifist_oppressive:0 "A"
 		policy_option_tec_pacifist_oppressive_flag:0 "A"
 		policy_option_tec_pacifist_oppressive_desc:0 "TO DO.\n\n§ETO DO§!"
 
@@ -137,20 +140,21 @@
 		#	> +5%-10% main species pop output
 		TEC_ETHIC_XENOPHOBE_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §HTO DO§! Policy, allowing a better control of the empire identity and frontier protection\n\n"
 
-		policy_tec_xenophobe_control:0 "TO DO NAME"
-		policy_tec_xenophobe_control_desc:0 "TO DO DESC"
+		policy_tec_xenophobe_ethic_policy:0 "TO DO NAME"
+		policy_tec_xenophobe_ethic_policy_desc:0 "TO DO DESC"
 
-		policy_option_tec_xenophobe_isolation_name:0 "Xenophobic Isolationism"
-		policy_option_tec_xenophobe_isolation_flag:0 "A"
-		policy_option_tec_xenophobe_isolation_desc:0 "We .\n\n§ETO DO§!"
+		policy_tec_xenophobe_ethic_option_isolation:0 "Xenophobic Isolationism"
+		policy_tec_xenophobe_ethic_option_isolation_name:0 "$policy_tec_xenophobe_ethic_option_isolation$"
+		policy_tec_xenophobe_ethic_option_isolation_flag:0 "A"
+		policy_tec_xenophobe_ethic_option_isolation_desc:0 "We .\n\n§ETO DO§!"
 
-		policy_option_tec_xenophobe_default_name:0 "Xenophobic Suspicion"
-		policy_option_tec_xenophobe_default_flag:0 "A"
-		policy_option_tec_xenophobe_default_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_tec_xenophobe_ethic_option_default:0 "Xenophobic Suspicion"
+		policy_tec_xenophobe_ethic_option_default_flag:0 "A"
+		policy_tec_xenophobe_ethic_option_default_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_xenophobe_hate_name:0 "Xenophobic Hate"
-		policy_option_tec_xenophobe_hate_flag:0 "A"
-		policy_option_tec_xenophobe_hate_desc:0 "Those who are not like us pose a constant threat, a hidden menace. We must not tolerate it, we must not tolerate them.\n\n§ETO DO§!"
+		policy_tec_xenophobe_ethic_option_hate:0 "Xenophobic Hate"
+		policy_tec_xenophobe_ethic_option_hate_flag:0 "A"
+		policy_tec_xenophobe_ethic_option_hate_desc:0 "Those who are not like us pose a constant threat, a hidden menace. We must not tolerate it, we must not tolerate them.\n\n§ETO DO§!"
 
 		#- Xenophile
 		#	> Add: can host gestalt pops
@@ -158,100 +162,100 @@
 		#	> Envoys +1+2
 		TEC_ETHIC_XENOPHILE_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §HOpen Frontiers§! Policy, allowing a better control of planet and species immigration\n\n"
 
-		policy_tec_xenophile_control:0 "TO DO NAME"
-		policy_tec_xenophile_control_desc:0 "TO DO DESC"
+		policy_tec_xenophile_ethic_policy:0 "TO DO NAME"
+		policy_tec_xenophile_ethic_policy_desc:0 "TO DO DESC"
 
-		policy_option_tec_xenophile_diversity_name:0 "Xenophile Diversity"
-		policy_option_tec_xenophile_diversity_flag:0 "A"
-		policy_option_tec_xenophile_diversity_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_tec_xenophile_ethic_option_diversity:0 "Xenophile Diversity"
+		policy_tec_xenophile_ethic_option_diversity_flag:0 "A"
+		policy_tec_xenophile_ethic_option_diversity_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_xenophile_default_name:0 "Xenophile Openness"
-		policy_option_tec_xenophile_default_flag:0 "A"
-		policy_option_tec_xenophile_default_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_tec_xenophile_ethic_option_default:0 "Xenophile Openness"
+		policy_tec_xenophile_ethic_option_default_flag:0 "A"
+		policy_tec_xenophile_ethic_option_default_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_xenophile_integration_name:0 "Xenophile Integration"
-		policy_option_tec_xenophile_integration_flag:0 "A"
-		policy_option_tec_xenophile_integration_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_tec_xenophile_ethic_option_integration:0 "Xenophile Integration"
+		policy_tec_xenophile_ethic_option_integration_flag:0 "A"
+		policy_tec_xenophile_ethic_option_integration_desc:0 "TO DO.\n\n§ETO DO§!"
 
 		#- Competitive
 		#	> +10-20% Trade value
 		#	> Upgraded entepreneur buildings?
 		TEC_ETHIC_COMPETITIVE_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §HTO DO§! Policy, TO DO\n\n"
 
-		policy_tec_competitive_control:0 "TO DO NAME"
-		policy_tec_competitive_control_desc:0 "TO DO DESC"
+		policy_tec_competitive_ethic_policy:0 "TO DO NAME"
+		policy_tec_competitive_ethic_policy_desc:0 "TO DO DESC"
 
-		policy_option_tec_competitive_lenient_name:0 "Competitive Flexibility"
-		policy_option_tec_competitive_lenient_flag:0 "A"
-		policy_option_tec_competitive_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_tec_competitive_ethic_option_lenient:0 "Competitive Flexibility"
+		policy_tec_competitive_ethic_option_lenient_flag:0 "A"
+		policy_tec_competitive_ethic_option_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_competitive_default_name:0 "Competitive Market"
-		policy_option_tec_competitive_default_flag:0 "A"
-		policy_option_tec_competitive_default_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_tec_competitive_ethic_option_default:0 "Competitive Market"
+		policy_tec_competitive_ethic_option_default_flag:0 "A"
+		policy_tec_competitive_ethic_option_default_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_competitive_profit_name:0 "Competitive Profiteering"
-		policy_option_tec_competitive_profit_flag:0 "A"
-		policy_option_tec_competitive_profit_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_tec_competitive_ethic_option_profit:0 "Competitive Profiteering"
+		policy_tec_competitive_ethic_option_profit_flag:0 "A"
+		policy_tec_competitive_ethic_option_profit_desc:0 "TO DO.\n\n§ETO DO§!"
 
 		#- Cooperative
 		#	> Remove pop housing usage
 		#	> Add "unemployed" state workers
 		TEC_ETHIC_COOPERATIVE_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §HCooperative Employment§! Policy, avoiding unemployment by generating state workers of different type\n\n"
 
-		policy_tec_cooperative_control:0 "TO DO NAME"
-		policy_tec_cooperative_control_desc:0 "TO DO DESC"
+		policy_tec_cooperative_ethic_policy:0 "TO DO NAME"
+		policy_tec_cooperative_ethic_policy_desc:0 "TO DO DESC"
 
-		policy_option_tec_cooperative_social_name:0 "Cooperative Fundings"
-		policy_option_tec_cooperative_social_flag:0 "A"
-		policy_option_tec_cooperative_social_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_tec_cooperative_ethic_option_social:0 "Cooperative Fundings"
+		policy_tec_cooperative_ethic_option_social_flag:0 "A"
+		policy_tec_cooperative_ethic_option_social_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_cooperative_default_name:0 "Cooperative Efforts"
-		policy_option_tec_cooperative_default_flag:0 "A"
-		policy_option_tec_cooperative_default_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_tec_cooperative_ethic_option_default:0 "Cooperative Efforts"
+		policy_tec_cooperative_ethic_option_default_flag:0 "A"
+		policy_tec_cooperative_ethic_option_default_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_cooperative_social_name:0 "Cooperative Distribution"
-		policy_option_tec_cooperative_social_flag:0 "A"
-		policy_option_tec_cooperative_social_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_tec_cooperative_ethic_option_social:0 "Cooperative Distribution"
+		policy_tec_cooperative_ethic_option_social_flag:0 "A"
+		policy_tec_cooperative_ethic_option_social_desc:0 "TO DO.\n\n§ETO DO§!"
 
 		#- Elitist
 		#	> Good as it is, i think
 		# +5%-10% specialist output
 		TEC_ETHIC_ELITIST_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §HTO DO§! Policy, TO DO\n\n"
 
-		policy_tec_elitist_control:0 "TO DO NAME"
-		policy_tec_elitist_control_desc:0 "TO DO DESC"
+		policy_tec_elitist_ethic_policy:0 "TO DO NAME"
+		policy_tec_elitist_ethic_policy_desc:0 "TO DO DESC"
 
-		policy_option_tec_elitist_lenient_name:0 "Elitist "
-		policy_option_tec_elitist_lenient_flag:0 "A"
-		policy_option_tec_elitist_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_tec_elitist_ethic_option_lenient:0 "Elitist "
+		policy_tec_elitist_ethic_option_lenient_flag:0 "A"
+		policy_tec_elitist_ethic_option_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_elitist_default_name:0 "Elitist Flexibility"
-		policy_option_tec_elitist_default_flag:0 "A"
-		policy_option_tec_elitist_default_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_tec_elitist_ethic_option_default:0 "Elitist Flexibility"
+		policy_tec_elitist_ethic_option_default_flag:0 "A"
+		policy_tec_elitist_ethic_option_default_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_elitist_oppressive_name:0 "Elitist Promotion"
-		policy_option_tec_elitist_oppressive_flag:0 "A"
-		policy_option_tec_elitist_oppressive_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_tec_elitist_ethic_option_oppressive:0 "Elitist Promotion"
+		policy_tec_elitist_ethic_option_oppressive_flag:0 "A"
+		policy_tec_elitist_ethic_option_oppressive_desc:0 "TO DO.\n\n§ETO DO§!"
 
 		#- Pluralist
 		#	> Rename
 		#	> Rework leader experience gain into xp per year per leader
 		TEC_ETHIC_PLURALIST_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §HTO DO§! Policy, TO DO\n\n"
 
-		policy_tec_pluralist_control:0 "TO DO NAME"
-		policy_tec_pluralist_control_desc:0 "TO DO DESC"
+		policy_tec_pluralist_ethic_policy:0 "TO DO NAME"
+		policy_tec_pluralist_ethic_policy_desc:0 "TO DO DESC"
 
-		policy_option_tec_pluralist_lenient_name:0 "A"
-		policy_option_tec_pluralist_lenient_flag:0 "A"
-		policy_option_tec_pluralist_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_tec_pluralist_ethic_option_lenient:0 "A"
+		policy_tec_pluralist_ethic_option_lenient_flag:0 "A"
+		policy_tec_pluralist_ethic_option_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_pluralist_default_name:0 "A"
-		policy_option_tec_pluralist_default_flag:0 "A"
-		policy_option_tec_pluralist_default_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_tec_pluralist_ethic_option_default:0 "A"
+		policy_tec_pluralist_ethic_option_default_flag:0 "A"
+		policy_tec_pluralist_ethic_option_default_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_pluralist_oppressive_name:0 "A"
-		policy_option_tec_pluralist_oppressive_flag:0 "A"
-		policy_option_tec_pluralist_oppressive_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_tec_pluralist_ethic_option_oppressive:0 "A"
+		policy_tec_pluralist_ethic_option_oppressive_flag:0 "A"
+		policy_tec_pluralist_ethic_option_oppressive_desc:0 "TO DO.\n\n§ETO DO§!"
 
 		#- Materialist
 		#	> Remove upkeep from jobs
@@ -260,11 +264,17 @@
 		# Experimental research labs can perform specific experiments to provide a bonus to a research type in exchange of certain 
 		TEC_ETHIC_MATERIALIST_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §HInnovation focus§! Policy, allowing a specific focus on a research field\n\n"
 
+		policy_tec_materialist_ethic_policy:0 "TO DO NAME"
+		policy_tec_materialist_ethic_policy_desc:0 "TO DO DESC"
+
 		#- Spiritualist
 		#	> Remove pops upkeep - that handled by cults
 		#	> Alter cults so they are more interesting
 		# +10-20% unity
 		TEC_ETHIC_SPIRITUALIST_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §HEmpire Cult§! Policy, allowing certain bonuses based on the chosen faith\n\n"
+
+		policy_tec_spiritualist_ethic_policy:0 "TO DO NAME"
+		policy_tec_spiritualist_ethic_policy_desc:0 "TO DO DESC"
 
 		#- Industrialist
 		#	> Remove minerals output
@@ -272,20 +282,20 @@
 		# -10-20% building cost
 		TEC_ETHIC_INDUSTRIALIST_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §HUnstoppable Progress§! Policy, TO DO\n\n"
 
-		policy_tec_industrialist_control:0 "TO DO NAME"
-		policy_tec_industrialist_control_desc:0 "TO DO DESC"
+		policy_tec_industrialist_ethic_policy:0 "TO DO NAME"
+		policy_tec_industrialist_ethic_policy_desc:0 "TO DO DESC"
 
-		policy_option_tec_industrialist_production_name:0 "Industrialist Growth"
-		policy_option_tec_industrialist_production_flag:0 "A"
-		policy_option_tec_industrialist_production_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_tec_industrialist_ethic_option_production:0 "Industrialist Growth"
+		policy_tec_industrialist_ethic_option_production_flag:0 "A"
+		policy_tec_industrialist_ethic_option_production_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_industrialist_default_name:0 "Industrialist Development"
-		policy_option_tec_industrialist_default_flag:0 "A"
-		policy_option_tec_industrialist_default_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_tec_industrialist_ethic_option_default:0 "Industrialist Development"
+		policy_tec_industrialist_ethic_option_default_flag:0 "A"
+		policy_tec_industrialist_ethic_option_default_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_industrialist_development_name:0 "Industrialist Overdrive"
-		policy_option_tec_industrialist_development_flag:0 "A"
-		policy_option_tec_industrialist_development_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_tec_industrialist_ethic_option_development:0 "Industrialist Overdrive"
+		policy_tec_industrialist_ethic_option_development_flag:0 "A"
+		policy_tec_industrialist_ethic_option_development_desc:0 "TO DO.\n\n§ETO DO§!"
 
 		#- Ecologist
 		#	> Remove consumer goods upkeep
@@ -293,20 +303,20 @@
 		# -10-20% building upkeep
 		TEC_ETHIC_ECOLOGIST_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §HEcological Synchrony§! Policy, TO DO\n\n"
 
-		policy_tec_ecologist_control:0 "TO DO NAME"
-		policy_tec_ecologist_control_desc:0 "TO DO DESC"
+		policy_tec_ecologist_ethic_policy:0 "TO DO NAME"
+		policy_tec_ecologist_ethic_policy_desc:0 "TO DO DESC"
 
-		policy_option_tec_ecologist_lenient_name:0 "A"
-		policy_option_tec_ecologist_lenient_flag:0 "A"
-		policy_option_tec_ecologist_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_tec_ecologist_ethic_option_lenient:0 "A"
+		policy_tec_ecologist_ethic_option_lenient_flag:0 "A"
+		policy_tec_ecologist_ethic_option_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_ecologist_default_name:0 "A"
-		policy_option_tec_ecologist_default_flag:0 "A"
-		policy_option_tec_ecologist_default_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_tec_ecologist_ethic_option_default:0 "A"
+		policy_tec_ecologist_ethic_option_default_flag:0 "A"
+		policy_tec_ecologist_ethic_option_default_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_ecologist_oppressive_name:0 "A"
-		policy_option_tec_ecologist_oppressive_flag:0 "A"
-		policy_option_tec_ecologist_oppressive_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_tec_ecologist_ethic_option_oppressive:0 "A"
+		policy_tec_ecologist_ethic_option_oppressive_flag:0 "A"
+		policy_tec_ecologist_ethic_option_oppressive_desc:0 "TO DO.\n\n§ETO DO§!"
 
 		#GESTALT:
 		#- Apathy
