--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -19,7 +19,7 @@
 # §Y thisisyellow §!
 
 # --------------------------- MAINSCREEN -------------------------------- #DATE DATE DATE DATE
-	TEC_EVOLVED_VERSION:0 "Evolved Version: v0.9R5B (§Y26-04-2023§!)"
+	TEC_EVOLVED_VERSION:0 "Evolved Version: v0.9R6A (§Y09-05-2023§!)"
 	TEC_EVOLVED_TOOLTIP:0 "§E$TEC_EVOLVED_TITLE$§!\n§Y$TEC_EVOLVED_STEAMLINK$§!\n$TEC_EVOLVED_REPORTS$\n\n$TEC_EVOLVED_DONATIONS$"
 	TEC_EVOLVED_TITLE:0 "Stellaris Evolved"
 	TEC_EVOLVED_STEAMLINK:0 "Clicking this item will open the mod Steam Workshop page"
@@ -50,10 +50,10 @@
 	tec_loc_physics:0 "£physics£ §Y$physics_research$§!"
 	tec_loc_research_resources:0 "£trigger_tec_research£ §YResearch§!" 
 
- tec_loc_rare_crystals:0 "£rare_crystals£ §Y$rare_crystals$§!"
- tec_loc_exotic_gases:0 "£exotic_gases£ §Y$exotic_gases$§!"
- tec_loc_volatile_motes:0 "£volatile_motes£ §Y$volatile_motes$§!"
- tec_loc_minor_artifacts:0 "£minor_artifacts£ §Y$minor_artifacts$§!"
+	tec_loc_rare_crystals:0 "£rare_crystals£ §Y$rare_crystals$§!"
+	tec_loc_exotic_gases:0 "£exotic_gases£ §Y$exotic_gases$§!"
+	tec_loc_volatile_motes:0 "£volatile_motes£ §Y$volatile_motes$§!"
+	tec_loc_minor_artifacts:0 "£minor_artifacts£ §Y$minor_artifacts$§!"
 
  # Fake resource locs
 	tec_loc_housing: "£housing£ $PLANET_HOUSING_TITLE$"
@@ -102,8 +102,9 @@
 
 	tec_loc_failure_rate:0 "§R£job_purge£ Failure Rate§!"
 
-
 	tec_blank:0 ""
+
+	trigger_tec_warning:1 "£trigger_tec_warning£ "
 
 
 # --------------------------- MACHINE COMPUTING POWER --------------------------------
