policy smol tests

--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -149,10 +149,12 @@
 		policy_tec_xenophobe_ethic_option_isolation_desc:0 "We .\n\n§ETO DO§!"
 
 		policy_tec_xenophobe_ethic_option_default:0 "Xenophobic Suspicion"
+		policy_tec_xenophobe_ethic_option_default_name:0 "$policy_tec_xenophobe_ethic_option_default$"
 		policy_tec_xenophobe_ethic_option_default_flag:0 "A"
 		policy_tec_xenophobe_ethic_option_default_desc:0 "TO DO.\n\n§ETO DO§!"
 
 		policy_tec_xenophobe_ethic_option_hate:0 "Xenophobic Hate"
+		policy_tec_xenophobe_ethic_option_hate_name:0 "$policy_tec_xenophobe_ethic_option_hate$"
 		policy_tec_xenophobe_ethic_option_hate_flag:0 "A"
 		policy_tec_xenophobe_ethic_option_hate_desc:0 "Those who are not like us pose a constant threat, a hidden menace. We must not tolerate it, we must not tolerate them.\n\n§ETO DO§!"
 
