--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -425,7 +425,7 @@ tec_part_concept_is_specialized: "If specialized:\n  $tec_loc_housing$: §G+3§!
   concept_tec_district_tec_aqua_farming_hive_icon: "£district£ $district_tec_aqua_farming$"
   concept_tec_district_tec_aqua_farming_hive_plural: "$district_tec_aqua_farming_plural$"
   concept_tec_district_tec_aqua_farming_hive_plural_icon: "£district£ $district_tec_aqua_farming_plural$"
-  concept_tec_district_tec_aqua_farming_hive_desc: "$tec_loc_housing$: §G+2§!\n£mod_job_tec_aqua_drone_add£ $mod_job_angler_add$: §G+2§!\n£mod_job_tec_depth_drone_add£ $mod_tec_depth_drone_diver_add$: §G+1§!\n\n$job_tec_aqua_drone_effect_desc$\n$job_tec_depth_drone_effect_desc$\n\n['concept_tec_district_farming_variants']"
+  concept_tec_district_tec_aqua_farming_hive_desc: "$tec_loc_housing$: §G+2§!\n£mod_job_angler_add£ $mod_job_tec_aqua_drone_add$: §G+2§!\n£mod_job_tec_depth_drone_add£ $mod_tec_depth_drone_diver_add$: §G+1§!\n\n$job_tec_aqua_drone_effect_desc$\n$job_tec_depth_drone_effect_desc$\n\n['concept_tec_district_farming_variants']"
 
   # Ecoworld
 
@@ -460,7 +460,7 @@ tec_part_concept_is_specialized: "If specialized:\n  $tec_loc_housing$: §G+3§!
   concept_tec_district_tec_eco_aqua_farming_hive_icon: "£district£ $district_tec_eco_aqua_farming$"
   concept_tec_district_tec_eco_aqua_farming_hive_plural: "$district_tec_eco_aqua_farming_plural$"
   concept_tec_district_tec_eco_aqua_farming_hive_plural_icon: "£district£ $district_tec_eco_aqua_farming_plural$"
-  concept_tec_district_tec_eco_aqua_farming_hive_desc: "$tec_loc_housing$: §G+3§!\n£mod_job_tec_aqua_drone_add£ $mod_job_tec_aqua_drone_add$: §G+3§!\n£mod_job_tec_depth_drone_add£ $mod_tec_depth_drone_diver_add$: §G+1§!\n$tec_part_concept_is_specialized$£mod_job_artisan_drone_add£ $mod_job_artisan_drone_add$: §G+3§!\n\n$job_tec_aqua_drone_effect_desc$\n$job_tec_depth_drone_effect_desc$\n$job_artisan_drone_effect_desc$\n\n['concept_tec_district_farming_variants']"
+  concept_tec_district_tec_eco_aqua_farming_hive_desc: "$tec_loc_housing$: §G+3§!\n£mod_job_angler_add£ $mod_job_tec_aqua_drone_add$: §G+3§!\n£mod_job_tec_depth_drone_add£ $mod_job_tec_depth_drone_add$: §G+1§!\n$tec_part_concept_is_specialized$£mod_job_artisan_drone_add£ $mod_job_artisan_drone_add$: §G+3§!\n\n$job_tec_aqua_drone_effect_desc$\n$job_tec_depth_drone_effect_desc$\n$job_artisan_drone_effect_desc$\n\n['concept_tec_district_farming_variants']"
 
 
 # /
