Leader fixes + more

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -619,7 +619,7 @@
 # ------------------------------------------------- CYBERNETICS
  # --------------- T0
 	trait_tec_basic_cybernetics_main:0 "Basic Implants"
-	trait_tec_basic_cybernetics_main_desc:0 "§LThis species has embraced early cybernetics on such a scale that its members can modularily improve themselves as cyborgs if they want to; while most of the population uses them for certain living commodities or body customization, the increasing replacement of organic parts with cybernetic implants is not optimized tho, leading to potential defective and psychological secondary effects.§!\n"
+	trait_tec_basic_cybernetics_main_desc:0 "§LThis species has embraced early cybernetics on such a scale that its members can modularily improve themselves as cyborgs if they want to; while most of the population uses them for certain living commodities or body customization, the increasing replacement of organic parts with cybernetic implants is not optimized, thus leading to potential defective and psychological secondary effects.§!\n"
 	leader_trait_tec_basic_cybernetics_main:0 "$trait_tec_basic_cybernetics_main$"
 	leader_trait_tec_basic_cybernetics_main_desc:0 "§LTO DO.§!\n"
 
