--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -1,8 +1,12 @@
 ﻿l_english:
 # Civic types
-concept_tec_origin_civic: "Origin Exclusive Civic"
-concept_tec_origin_civics: "Origin Exclusive Civics"
-concept_tec_origin_civic_desc: "Origin exclusive civics, are civics that alter the playstyle of a specific origin, or enhance it further. These usually either reinforce the origin's thematic or give it a new twist."
+concept_tec_origin_civic: "Origin Civic"
+concept_tec_origin_civics: "Origin Civics"
+concept_tec_origin_civic_desc: "Origin civics are origin-exclusive civics that alter the playstyle of a specific origin, or enhance it further. These usually either reinforce the origin's thematic or give it a new twist."
+
+concept_tec_foundation_civic: "Foundation Civic"
+concept_tec_foundation_civics: "Foundation Civics"
+concept_tec_foundation_civic_desc: "Foundation civics serve as a layer of background and playstyle, akin to a second origin, offering a theme and sub mechanics. All foundation civics are mutually exclusive with themselves and with most Origin civics."
 
 concept_tec_ruler_replace_civic: "Ruler Replacement Civic"
 concept_tec_ruler_replace_civics: "Ruler Replacement Civics"
