--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -162,53 +162,53 @@
 # /
 
 # --------------------------- Origins --------------------------------
-# Origin GENERIC Civics
+# Origin FOUNDATION Civics
 # ------------------------------------------------------------	§B§!
  # --------------- Psionic
-	civic_tec_ascension_psionic:0 "§B§!Shroud Tainted"
-	civic_tec_ascension_psionic_desc:0 "TO DO"
-	civic_tec_ascension_psionic_tooltip:0 "§EInitial $ap_tec_psionic_ascendance$ Civic§!\n\nTO DO"
+	civic_tec_foundation_psionic:0 "§B§!Shroud Tainted"
+	civic_tec_foundation_psionic_desc:0 "TO DO"
+	civic_tec_foundation_psionic_tooltip:0 "§EInitial $ap_tec_psionic_ascendance$ Civic§!\n\nTO DO"
 	# Starts with psionic, but at a weakened state
 	# Bad things happen
  # --------------- Psychic
-	civic_tec_ascension_psychic:0 "§B§!Out-expanding Psyche"
-	civic_tec_ascension_psychic_desc:0 "TO DO"
-	civic_tec_ascension_psychic_tooltip:0 "§EInitial $ap_tec_psionic_ascendance$ Civic§!\n\nTO DO"
+	civic_tec_foundation_psychic:0 "§B§!Out-expanding Psyche"
+	civic_tec_foundation_psychic_desc:0 "TO DO"
+	civic_tec_foundation_psychic_tooltip:0 "§EInitial $ap_tec_psionic_ascendance$ Civic§!\n\nTO DO"
 	# Starts with psychic, but madness is rampant
 	# Bad things happen
  # --------------- Genetic
-	civic_tec_ascension_genetic:0 "§B§!Attempted Perfection"
-	civic_tec_ascension_genetic_desc:0 "TO DO"
-	civic_tec_ascension_genetic_tooltip:0 "§EInitial $ap_tec_genetic_perfection$ Civic§!\n\nTO DO"
+	civic_tec_foundation_genetic:0 "§B§!Attempted Perfection"
+	civic_tec_foundation_genetic_desc:0 "TO DO"
+	civic_tec_foundation_genetic_tooltip:0 "§EInitial $ap_tec_genetic_perfection$ Civic§!\n\nTO DO"
 	# Starts with a weakened genetic perfection trait
 	# Bad things happen
  # --------------- Biological
-	civic_tec_bioshapers_fleshcrafters:0 "§B§!Flesh Architects"
-	civic_tec_bioshapers_fleshcrafters_desc:0 "TO DO"
-	civic_tec_bioshapers_fleshcrafters_tooltip:0 "TO DO"
+	civic_tec_foundation_fleshcrafters:0 "§B§!Flesh Architects"
+	civic_tec_foundation_fleshcrafters_desc:0 "TO DO"
+	civic_tec_foundation_fleshcrafters_tooltip:0 "TO DO"
 
-	civic_tec_ascension_biological:0 "§B§!Mutagenic Biology"
-	civic_tec_ascension_biological_desc:0 "TO DO"
-	civic_tec_ascension_biological_tooltip:0 "§EInitial $ap_tec_biological_2$ Civic§!\n\nTO DO"
+	civic_tec_foundation_biological:0 "§B§!Mutagenic Biology"
+	civic_tec_foundation_biological_desc:0 "TO DO"
+	civic_tec_foundation_biological_tooltip:0 "§EInitial $ap_tec_biological_2$ Civic§!\n\nTO DO"
 	# Starts mutated by biogenics, but weakened
 	# Bad things happen
  # --------------- Cybernetics
-	civic_tec_ascension_cybernetic:0 "§B§!Premature Augmentation"
-	civic_tec_ascension_cybernetic_desc:0 "TO DO"
-	civic_tec_ascension_cybernetic_tooltip:0 "§EInitial $ap_tec_cybernetic_revolution$ Civic§!\n\nTO DO"
+	civic_tec_foundation_cybernetic:0 "§B§!Premature Augmentation"
+	civic_tec_foundation_cybernetic_desc:0 "TO DO"
+	civic_tec_foundation_cybernetic_tooltip:0 "§EInitial $ap_tec_cybernetic_revolution$ Civic§!\n\nTO DO"
 	# Starts with non upgraded cybernetic and access to some cybernetic traits
 	# Events through of radicals
  # --------------- Synthetics
-	civic_tec_ascension_synthetic:0 "§B§!Illustrated Transubstantiation"
-	civic_tec_ascension_synthetic_desc:0 "TO DO"
-	civic_tec_ascension_synthetic_tooltip:0 "§EInitial $ap_synthetic_evolution$ Civic§!\n\nTO DO"
+	civic_tec_foundation_synthetic:0 "§B§!Illustrated Transubstantiation"
+	civic_tec_foundation_synthetic_desc:0 "TO DO"
+	civic_tec_foundation_synthetic_tooltip:0 "§EInitial $ap_synthetic_evolution$ Civic§!\n\nTO DO"
 	# Starts with less pops and being synth
 	# Remaining population is not happy
 	# Cybermen influence
  # --------------- Replicants
-	civic_tec_ascension_replicants:0 "§B§!Transorganic Inventive"
-	civic_tec_ascension_replicants_desc:0 "TO DO"
-	civic_tec_ascension_replicants_tooltip:0 "§EInitial $ap_tec_replicant$ Ascension Civic§!\n\nTO DO"
+	civic_tec_foundation_replicants:0 "§B§!Transorganic Inventive"
+	civic_tec_foundation_replicants_desc:0 "TO DO"
+	civic_tec_foundation_replicants_tooltip:0 "§EInitial $ap_tec_replicant$ Ascension Civic§!\n\nTO DO"
 	# Starts with a third of the population being replicants that can't be reproduced
 	# Starts with a replicant production center
 	# Blade runner, carbon copy
