--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -137,7 +137,7 @@
  job_necro_apprentice_effect_hive_desc:0 "£job_necro_apprentice£ $job_necro_apprentice_plural$ turn §Y$tec_loc_food$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_amenities$§!.\n$job_necro_apprentice_effect_desc_base$"
  job_necro_apprentice_effect_hive_lithoid_desc:0 "£job_necro_apprentice£ $job_necro_apprentice_plural$ turn §Y$tec_loc_minerals$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_amenities$§!.\n$job_necro_apprentice_effect_desc_base$"
 
-job_pearl_diver_effect_desc:1 "['concept_tec_job_pearl_diver_plural_icon'] turn [job_tec_pearl_diver_upkeep] into §Y$tec_loc_consumer_goods$§! and §Y$tec_loc_trade_value$§!"
+job_pearl_diver_effect_desc:1 "['concept_tec_job_pearl_diver_plural_icon'] turn [root.job_tec_pearl_diver_upkeep] into §Y$tec_loc_consumer_goods$§! and §Y$tec_loc_trade_value$§!"
 
  job_bath_attendant_effect_desc: "$job_toxic_baths_effect_desc$"
  job_bath_attendant_hive_effect_desc: "$job_toxic_baths_effect_hive_desc$"
