Ai auth work, scripted modifiers for leaders, adjusted events and trait checks a bit

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -565,7 +565,7 @@
 
 	civic_memory_vault:0 "§L§!Vaults of Knowledge"
 	civic_memory_vault_desc:1 "['concept_tec_feature_civic']\n\nThe knowledge, principles, and experiences of exceptional people are digitized and accumulated in the Vaults of Knowledge. Citizens can access this source of wisdom and experience to learn from the ghosts of the past."
-	civic_tooltip_memory_vault_effects:0 "§YLeaders§! start at Level §G+1§!\nCan build unique £building£ §Y$building_paragon_memory_vaults$§!\n£building£§Y$building_paragon_memory_vaults$§! produce $r_unity$ and increase §Y$MOD_LEADER_SPECIES_EXP_GAIN$§! based on §YDestiny Traits§! acquired."
+	civic_tooltip_memory_vault_effects:0 "Can build unique £building£ §Y$building_paragon_memory_vaults$§!\n£building£§Y$building_paragon_memory_vaults$§! produce $r_unity$ and increase §Y$MOD_LEADER_SPECIES_EXP_GAIN$§! based on §YDestiny Traits§! acquired."
 
 	civic_dystopian_society:1 "§L§!Dystopian Society"
 	civic_dystopian_society_desc:1 "['concept_tec_feature_civic']\n['concept_tec_living_standard_civic']\n\nOnly the elite of the elite deserve the best of the best. Everyone else is expected to provide for the ruling class and their lackeys."
@@ -686,11 +686,11 @@
 
 	civic_distinguished_admiralty:0 "§M§!Distinguished Admiralty"
 	civic_distinguished_admiralty_desc:0 "['concept_tec_leader_civic']\n\nThe Fleet and the Admiralty have unusually prominent roles in this society, wielding a great deal of influence in political circles. They have the pick of the litter when it comes to new military recruits."
-	civic_distinguished_admiralty_tooltip:0 "§YAdmirals§! and §YGenerals§! start with 2 extra levels, with a max of level 3"
+	civic_distinguished_admiralty_tooltip:0 ""
 
 	civic_heroic_tales:0 "§M§!Heroic Past"
 	civic_heroic_tales_desc:1 "['concept_tec_leader_civic']\n\nThe legendary heroes of the past inspire this civilizations young people to achieve the extraordinary. As role models, government officials are expected to embody these ideals."
-	civic_heroic_tales_effects:0 "$tr_aptitude_finish_desc$"
+	civic_heroic_tales_effects:0 ""
 
 	civic_crusader_spirit:0 "§M§!Crusader Spirit"
 	civic_crusader_spirit_desc:0 "['concept_tec_leader_civic']\n\nThe lack of guidance creates weak minds - which easily succumb to corruption and plunge into decadence. This society has assumed the self-imposed mantle of bringing "enlightenment" to the masses through aggressive proselytizing."
