--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -24,7 +24,7 @@
 	TEC_AUTH_AI_RULER_REPLACE:0 "§ERuler:§! The ruler is an AI platform replaced by an immortal §YMechanical Unit§!, which gain diverse bonuses based on civics and technologies, but §Ycan't gain experience naturally§!.\n\n"
 	TEC_AUTH_AI_RULER_JOBS_REPLACE:0 "§EJob Replace:§! £job_politician£ Politicians are replaced by £job_tec_ai_computator£ §YComputators§!; £building£ Administrative Offices are replaced by £building£ §Y$building_tec_aiauth_1_plural$§!, providing £job_tec_ai_operator£ §YOperators§! which replace £job_bureaucrat£ Bureaucrats.\n\n"
 	TEC_AUTH_AI_RULER_JOBS_MEGACORP_REPLACE:0 "§EJob Replace:§! £job_executive£ Executives are replaced by £job_tec_ai_computator£ §YComputators§!; £building£ Administrative Offices are replaced by £building£ §Y$building_tec_aiauth_1_plural$§!, providing £job_tec_ai_operator£ §YOperators§! which replace £job_manager£ Managers.\n\n"
-	TEC_AUTH_AI_LEADER_MECHANIC_BONUS:0 "§EExclusive Mechanic:§! The AI platform will gain £sr_tec_ai_power_dummy£ §YProgram Capacity§! with §YJobs§!, §YBuildings§! and §YEvents§!. £sr_tec_ai_power_dummy£ Program Capacity can be consumed to §Ycustomize§! the authority and §Ylevel§! up the ruler.\n\n"
+	TEC_AUTH_AI_LEADER_MECHANIC_BONUS:0 "§EExclusive Mechanic:§! The AI platform will gain £sr_tec_ai_power£ §YProgram Capacity§! with §YJobs§!, §YBuildings§! and §YEvents§!. £sr_tec_ai_power£ Program Capacity can be consumed to §Ycustomize§! the authority and §Ylevel§! up the ruler.\n\n"
 
 
 	AUTH_HIVE_MIND_NEW_DISTRICT_BONUS:0 "§EDistrict Bonus:§! Each §H£district£ Menial District§! provides §H1 extra £job£ Job§!.\n\n"
