--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1120,7 +1120,7 @@
 # ------------------------------------------------- AI AUTHORITY
 	leader_trait_aiauth_ruler_programs_0:0 "Program Slots: 0"
 	leader_trait_aiauth_ruler_programs_0_desc:0 "§EThe AI capacities grow based on the level of administrative computation power gained, allowing a more flexible and streamlined comand process.§!"
-	TRAIT_AIAUTH_RULER_PROGRAMS_EFFECT:0 "£sr_tec_ai_power_dummy£ §Y$sr_tec_ai_power_dummy$§! is gained by certain £job_tec_ai_computator£ jobs and £physics£ Technologies."
+	TRAIT_AIAUTH_RULER_PROGRAMS_EFFECT:0 "£sr_tec_ai_power£ §Y$sr_tec_ai_power$§! is gained by certain £job_tec_ai_computator£ jobs and £physics£ Technologies."
 	TRAIT_AIAUTH_RULER_PROGRAMS_EFFECT_0:0 "$TRAIT_AIAUTH_RULER_PROGRAMS_EFFECT$\nProgram slots available: §R0§!"
 	leader_trait_aiauth_ruler_programs_1:0 "Program Slots: §R1§!"
 	leader_trait_aiauth_ruler_programs_1_desc:0 "$leader_trait_aiauth_ruler_programs_0_desc$"
@@ -1156,8 +1156,8 @@
 	leader_trait_aiauth_ruler_programs_10_desc:0 "$leader_trait_aiauth_ruler_programs_0_desc$"
 	TRAIT_AIAUTH_RULER_PROGRAMS_EFFECT_10:0 "$TRAIT_AIAUTH_RULER_PROGRAMS_EFFECT$\nActually the AI has a capacity for: §B10 programs§!"
 
-	sr_tec_ai_power_dummy:0 "AI Program Capacity"
-	sr_tec_ai_power_dummy_desc:0 "Data, programs, protocols... filtered by a sentient and sapient ai with the sole task of administration and ensuring the empire prosperity"
+	sr_tec_ai_power:0 "AI Capacity"
+	sr_tec_ai_power_desc:0 "Data, programs, protocols... filtered by a sentient and sapient ai with the sole task of administration and ensuring the empire prosperity"
 
 	leader_trait_aiauth_ruler_checker_0:0 "AI Core"
 	leader_trait_aiauth_ruler_checker_0_desc:0 "$leader_trait_aiauth_ruler_programs_0_desc$"
