--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -65,6 +65,8 @@
 	tec_loc_trade_value: "£trade_value£ $TRADE_VALUE$"
 	tec_loc_pop_growth: "£mod_pop_growth_speed£ Pop Growth Speed"
 
+	tec_loc_sr_tec_ai_power: "£sr_tec_ai_power£ $sr_tec_ai_power$"
+
 	tec_loc_robot_assembly_add: "£job_roboticist£ Robot Assembly"
 	tec_loc_robot_assembly_mult: "£job_roboticist£ Robot Assembly Mult"
 	tec_loc_biological_assembly: "£mod_planet_pop_assembly_mult£ $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$"
@@ -269,3 +271,13 @@
 	tech_machinerf_exotic_desc:1 "By equipping our units with polyvalent environmental protections, we can increase our performance on any kind of exotic world."
  
 	tech_machinerf_exotic_effect:0 "Exotic World Machine Performance: §G+70%§!"
+
+
+# Ai auth
+
+tec_ai_power_balance_negative: "§R[tec_ai_power_balance_value]§!"
+tec_ai_power_balance_neutral: "§Y[tec_ai_power_balance_value]§!"
+tec_ai_power_balance_positive: "§G+[tec_ai_power_balance_value]§!"
+
+tec_cui_ai_power: "$tec_loc_sr_tec_ai_power$: [FROM.tec_ai_power_balance]"
+tec_cui_ai_power_effect: ""
