--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -844,7 +844,7 @@ policy_goods_policy:0 "Consumer Goods Production"
 
 
 # Aiauth temporally edict
- edict_tec_aiauth_menu:0 "£sr_tec_ai_power_dummy£ §Y$sr_tec_ai_power_dummy$§!"
+ edict_tec_aiauth_menu:0 "£sr_tec_ai_power£ §Y$sr_tec_ai_power$§!"
  edict_tec_aiauth_menu_desc:0 "This menu opens the AI authority ai power mechanic menu."
 
  # Ethic shift ap
