--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -367,7 +367,7 @@ tec_jump_empty:0 "\n\n"
  job_tec_ai_computator:0 "Computator"
  job_tec_ai_computator_plural:0 "Computators"
  job_tec_ai_computator_desc:0 "Computators are experienced members of the ruling class dedicated to serve and operate the orders and functions of its empire AI."
- job_tec_ai_computator_effect_desc:0 "£job_tec_ai_computator£ $job_tec_ai_computator_plural$ use $tec_loc_consumer_goods$ to produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £sr_tec_ai_power_dummy£ §Y$sr_tec_ai_power_dummy$§!."
+ job_tec_ai_computator_effect_desc:0 "£job_tec_ai_computator£ $job_tec_ai_computator_plural$ use $tec_loc_consumer_goods$ to produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £sr_tec_ai_power£ §Y$sr_tec_ai_power$§!."
  mod_job_tec_ai_computator_per_pop:0 "§G+1§! $job_tec_ai_computator$ Job Per $VALUE$ Pops"
  mod_job_tec_ai_computator_per_pop_short:0 "\n§G+1§! £job_tec_ai_computator_add£ per $VALUE$ £pop£"
  mod_job_tec_ai_computator_add:0 "$job_tec_ai_computator$ Jobs"
@@ -375,7 +375,7 @@ tec_jump_empty:0 "\n\n"
  job_tec_ai_operator:0 "Operator"
  job_tec_ai_operator_plural:0 "Operators"
  job_tec_ai_operator_desc:0 "Operators ensure the correct functioning of the AI terminals on each planet, ."
- job_tec_ai_operator_effect_desc:0 "£job_tec_ai_operator£ $job_tec_ai_operator_plural$ convert £trigger_tec_research£ §YResearch§! into §Y$tec_loc_unity$§!, while also increasing £sr_tec_ai_power_dummy£ §Y$sr_tec_ai_power_dummy$§!"
+ job_tec_ai_operator_effect_desc:0 "£job_tec_ai_operator£ $job_tec_ai_operator_plural$ convert £trigger_tec_research£ §YResearch§! into §Y$tec_loc_unity$§!, while also increasing £sr_tec_ai_power£ §Y$sr_tec_ai_power$§!"
  mod_job_tec_ai_operator_per_pop:0 "§G+1§! $job_tec_ai_operator$ Job Per $VALUE$ Pops"
  mod_job_tec_ai_operator_per_pop_short:0 "\n§G+1§! £job_tec_ai_operator_add£ per $VALUE$ £pop£"
  mod_job_tec_ai_operator_add:0 "$job_tec_ai_operator$ Jobs"
@@ -383,7 +383,7 @@ tec_jump_empty:0 "\n\n"
  job_tec_ai_high_ordinator:0 "High Ordinator"
  job_tec_ai_high_ordinator_plural:0 "High Ordinators"
  job_tec_ai_high_ordinator_desc:0 "Serving the faith and the doctrines promulgated by its ruling AI, the highest rank of Ordinators ensure both are streamlined and well tuned."
- job_tec_ai_high_ordinator_effect_desc:0 "£job_tec_ai_high_ordinator£ $job_tec_ai_high_ordinator_plural$ use $tec_loc_consumer_goods$ to produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £sr_tec_ai_power_dummy£ §Y$sr_tec_ai_power_dummy$§!."
+ job_tec_ai_high_ordinator_effect_desc:0 "£job_tec_ai_high_ordinator£ $job_tec_ai_high_ordinator_plural$ use $tec_loc_consumer_goods$ to produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £sr_tec_ai_power£ §Y$sr_tec_ai_power$§!."
  mod_job_tec_ai_high_ordinator_per_pop:0 "§G+1§! $job_tec_ai_high_ordinator$ Job Per $VALUE$ Pops"
  mod_job_tec_ai_high_ordinator_per_pop_short:0 "\n§G+1§! £job_tec_ai_high_ordinator_add£ per $VALUE$ £pop£"
  mod_job_tec_ai_high_ordinator_add:0 "$job_tec_ai_high_ordinator$ Jobs"
@@ -391,7 +391,7 @@ tec_jump_empty:0 "\n\n"
  job_tec_ai_ordinator:0 "Ordinator"
  job_tec_ai_ordinator_plural:0 "Ordinators"
  job_tec_ai_ordinator_desc:0 "Ordinators manage both bureaucratic and spiritual issues by transcribing and serving the purpose of the main divine AI."
- job_tec_ai_ordinator_effect_desc:0 "£job_tec_ai_high_ordinator£ $job_tec_ai_ordinator_plural$ convert £trigger_tec_research£ §YResearch§! into §Y$tec_loc_unity$§!, while also increasing £sr_tec_ai_power_dummy£ §Y$sr_tec_ai_power_dummy$§!"
+ job_tec_ai_ordinator_effect_desc:0 "£job_tec_ai_high_ordinator£ $job_tec_ai_ordinator_plural$ convert £trigger_tec_research£ §YResearch§! into §Y$tec_loc_unity$§!, while also increasing £sr_tec_ai_power£ §Y$sr_tec_ai_power$§!"
  mod_job_tec_ai_ordinator_per_pop:0 "§G+1§! $job_tec_ai_ordinator$ Job Per $VALUE$ Pops"
  mod_job_tec_ai_ordinator_per_pop_short:0 "\n§G+1§! £job_tec_ai_ordinator_add£ per $VALUE$ £pop£"
  mod_job_tec_ai_ordinator_add:0 "$job_tec_ai_ordinator$ Jobs"
@@ -400,7 +400,7 @@ tec_jump_empty:0 "\n\n"
  job_tec_ai_computator:0 "Computator"
  job_tec_ai_computator_plural:0 "Computators"
  job_tec_ai_computator_desc:0 "Computators are experienced members of the ruling class dedicated to serve and operate the orders and functions of its empire AI."
- job_tec_ai_computator_effect_desc:0 "£job_tec_ai_computator£ $job_tec_ai_computator_plural$ use $tec_loc_consumer_goods$ to produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§!, §Y$tec_loc_trade_value$§! and £sr_tec_ai_power_dummy£ §Y$sr_tec_ai_power_dummy$§!."
+ job_tec_ai_computator_effect_desc:0 "£job_tec_ai_computator£ $job_tec_ai_computator_plural$ use $tec_loc_consumer_goods$ to produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§!, §Y$tec_loc_trade_value$§! and £sr_tec_ai_power£ §Y$sr_tec_ai_power$§!."
  mod_job_tec_ai_computator_per_pop:0 "§G+1§! $job_tec_ai_computator$ Job Per $VALUE$ Pops"
  mod_job_tec_ai_computator_per_pop_short:0 "\n§G+1§! £job_tec_ai_computator_add£ per $VALUE$ £pop£"
  mod_job_tec_ai_computator_add:0 "$job_tec_ai_computator$ Jobs"
@@ -408,7 +408,7 @@ tec_jump_empty:0 "\n\n"
  job_tec_ai_high_ordinator:0 "High Ordinator"
  job_tec_ai_high_ordinator_plural:0 "High Ordinators"
  job_tec_ai_high_ordinator_desc:0 "Serving the faith and the doctrines promulgated by its ruling AI, the highest rank of Ordinators ensure both are streamlined and well tuned."
- job_tec_ai_high_ordinator_effect_desc:0 "£job_tec_ai_high_ordinator£ $job_tec_ai_high_ordinator_plural$ use $tec_loc_consumer_goods$ to produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§!, §Y$tec_loc_trade_value$§! and £sr_tec_ai_power_dummy£ §Y$sr_tec_ai_power_dummy$§!."
+ job_tec_ai_high_ordinator_effect_desc:0 "£job_tec_ai_high_ordinator£ $job_tec_ai_high_ordinator_plural$ use $tec_loc_consumer_goods$ to produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§!, §Y$tec_loc_trade_value$§! and £sr_tec_ai_power£ §Y$sr_tec_ai_power$§!."
  mod_job_tec_ai_high_ordinator_per_pop:0 "§G+1§! $job_tec_ai_high_ordinator$ Job Per $VALUE$ Pops"
  mod_job_tec_ai_high_ordinator_per_pop_short:0 "\n§G+1§! £job_tec_ai_high_ordinator_add£ per $VALUE$ £pop£"
  mod_job_tec_ai_high_ordinator_add:0 "$job_tec_ai_high_ordinator$ Jobs"
@@ -3580,7 +3580,29 @@ mod_tec_planet_pop_assembly_add_per_pop:0 "Monthly Mechanical Pop Assembly per P
 
 mod_tec_pop_upkeep_base_add:0 "Base £pop£ Pop Upkeep"
 
+# Leaders
 
+tec_starting_level: "Starting Level"
+mod_tec_leader_starting_skill_add: "Leader $tec_starting_level$"
+mod_tec_admiral_starting_skill_add: "$admiral_with_icon$ $tec_starting_level$"
+mod_tec_general_starting_skill_add: "$general_with_icon$ $tec_starting_level$"
+mod_tec_scientist_starting_skill_add: "$scientist_with_icon$ $tec_starting_level$"
+mod_tec_governor_starting_skill_add: "$governor_with_icon$ $tec_starting_level$"
+
+tec_starting_traits: "Starting Traits"
+mod_tec_leader_starting_traits_add: "Starting $tec_starting_traits$"
+mod_tec_admiral_starting_traits_add: "$admiral_with_icon$ $tec_starting_traits$"
+mod_tec_general_starting_traits_add: "$general_with_icon$ $tec_starting_traits$"
+mod_tec_scientist_starting_traits_add: "$scientist_with_icon$ $tec_starting_traits$"
+mod_tec_governor_starting_traits_add: "$governor_with_icon$ $tec_starting_traits$"
+
+mod_tec_ruler_only_councilor_traits: "Rulers can only get Councilor Traits"
+mod_tec_councilor_only_councilor_traits: "Councilors can only get Councilor Traits"
+mod_tec_leader_only_councilor_traits: "Leader can only get Councilor Traits"
+
+# Ai auth
+mod_tec_aiauth_total_weight_add: "$tec_loc_sr_tec_ai_power$ to Experience Share Weight"
+mod_tec_aiauth_experience_per_month: "$tec_loc_sr_tec_ai_power$ Allocated to Experience Gain"
 
 # Admin locs
 
